<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="26dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/orange"
    tools:context=".PasswordActivity">

    <Button
        android:id="@+id/btnBackFromPassword"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:text="@string/back"
        android:textColor="@color/dark_orange"
        android:backgroundTint="@color/white"
        android:textStyle="bold"
        android:layout_gravity="left|top"
        android:layout_marginBottom="30dp"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:textSize="14sp"
        android:textColorHint="@color/white_gray"
        android:textColor="@color/white_gray"
        android:inputType="textPassword"
        />


    <Button
        android:id="@+id/btnSetPassword"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:layout_marginBottom="28dp"
        android:textColor="@color/dark_orange"
        android:backgroundTint="@color/white"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginBottom="28dp"
        android:textColor="@color/dark_orange"
        android:backgroundTint="@color/white"
        android:textStyle="bold"
        />

</LinearLayout>