<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/journals"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvJournalTexts"
        android:textStyle="bold|italic"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/no_journals"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/tvNoJournalsText"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnInsertJournal"
        android:layout_below="@+id/tvJournalTexts"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/add_journal"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rvJournalList"
        android:layout_below="@id/btnSetPasswordFromMain"
        android:layout_marginTop="10dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSetPasswordFromMain"
        android:layout_below="@+id/btnInsertJournal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/set_pw"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"
        android:textStyle="bold"
        />


</RelativeLayout>