<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".AddJournalActivity"
    android:orientation="vertical"
    android:id="@+id/activity_add_journal_layout">


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                >

                <Button
                    android:layout_width="75dp"
                    android:layout_height="40dp"
                    android:id="@+id/btnBackFromAddJournal"
                    android:text="@string/back"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/orange"
                    android:layout_marginStart="10dp"/>


                <EditText
                    android:id="@+id/etAddJournalDate"
                    android:layout_height="30dp"
                    android:textAlignment="center"
                    android:layout_width="100dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="220dp"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/black"
                    android:text="@string/sample_date"
                    android:inputType="date"
                    tools:ignore="LabelFor"
                    android:autofillHints="Date"
                    android:background="@null"
                    />



            </LinearLayout>



            <EditText
                android:id="@+id/etAddJournalHeading"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:hint="@string/heading_hint"
                android:inputType="text"
                tools:ignore="LabelFor"
                android:autofillHints="Heading"
                android:background="@null"
                />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:id="@+id/ivAddJournalImage"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"/>


            <Button
                android:layout_width="70dp"
                android:id="@+id/btnAddJournalImage"
                android:layout_height="45dp"
                android:text="@string/load"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="13sp"
                android:backgroundTint="@color/orange"
                tools:ignore="SmallSp"
                android:layout_marginTop="10dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:id="@+id/tvAddMood"
                    android:text="Mood => "
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    />


                <EditText
                    android:id="@+id/etAddMood"
                    android:layout_height="30dp"
                    android:textAlignment="center"
                    android:layout_width="100dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/black"
                    android:hint="@string/mood"
                    android:inputType="text"
                    tools:ignore="LabelFor"
                    android:autofillHints="Mood"
                    android:background="@null"
                    />

            </LinearLayout>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:hint="@string/content_hint"
                android:autofillHints="Content"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor"
                android:background="@null"
                android:id="@+id/etAddJournalContent"/>


                <Button
                    android:layout_width="match_parent"
                    android:id="@+id/btnAddJournal"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/red"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>





